[workspace]
members = ["core", "derive", "fuzz", "."]

[package]
name = "libpacket"
version = "0.1.1"
authors = ["David Craven <david@craven.ch>", "Robert Clipsham <robert@octarineparrot.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
homepage = "https://github.com/libpnet/libpnet"
repository = "https://github.com/libpnet/libpnet"
description = "Cross-platform, binary packet parsing and manipulation"
readme = "README.md"
keywords = ["networking", "packet", "parsing", "raw"]
categories = ["network-programming", "parser-implementations"]

[dependencies]
libpacket-core = { path = "core", version = "0.1.0" }
libpacket-derive = { path = "derive", version = "0.1.0" }
