[package]
name = "libpacket-core"
version = "0.1.0"
authors = ["Robert Clipsham <robert@octarineparrot.com>", "Linus Färnstrand <faern@faern.net>"]
edition = "2018"
license = "MIT/Apache-2.0"
homepage = "https://github.com/libpnet/libpnet"
repository = "https://github.com/libpnet/libpnet"
description = "Fundamental base types and code used by pnet."
readme = "../README.md"
keywords = ["networking", "ethernet"]
categories = ["network-programming"]

[dependencies]
serde = { version = "1.0.125", optional = true, default-features = false }

[package.metadata.docs.rs]
# Enable the serde feature when generating docs on docs.rs, so the traits are visible
features = ["serde"]
